--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                 <div class="category-icon">✍️</div>
                 <h3 class="category-title">生活随笔</h3>
                 <p class="category-description">偶尔的生活感悟。</p>
-                <a href="essays/index.md" class="btn">阅读更多随笔</a>
+                <a href="_posts/essays/index.md" class="btn">阅读更多随笔</a>
             </div>
         </section>
     </main>
