--- a/index.html
+++ b/index.html
@@ -138,21 +138,21 @@
                 <div class="category-icon">📚</div>
                 <h3 class="category-title">读书笔记</h3>
                 <p class="category-description">主要记录技术类书籍的摘抄总结，包括编程语言、框架组件、系统设计等领域。</p>
-                <a href="notes/index.md" class="btn">查看所有笔记</a>
+                <a href="notes/" class="btn">查看所有笔记</a>
             </div>
             
             <div class="category-card">
                 <div class="category-icon">💻</div>
                 <h3 class="category-title">算法题解</h3>
                 <p class="category-description">主要分享LeetCode的解题思路和代码实现。</p>
-                <a href="solutions/index.md" class="btn">查看所有题解</a>
+                <a href="solutions" class="btn">查看所有题解</a>
             </div>
             
             <div class="category-card">
                 <div class="category-icon">✍️</div>
                 <h3 class="category-title">生活随笔</h3>
                 <p class="category-description">偶尔的生活感悟。</p>
-                <a href="essays/index.md" class="btn">阅读更多随笔</a>
+                <a href="essays/" class="btn">阅读更多随笔</a>
             </div>
         </section>
     </main>
